--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     
                     <div class="test-left">
                         <p class="test-desc">"Have learned more in this than ever before and understand. !"</p>
-                        <p class="test-auth">-- Jane Doe</p>
+                        <p class="test-auth">-- David Doe</p>
                     </div>
                 </li>
             </ul>
